<resources>
    <string name="app_name">zwy</string>

    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>

    <string name="start_calc_traditional">Start calculation traditional layouts</string>
    <string name="start_calc_constraint">Start calculation ConstraintLayout</string>
    <string name="finish">Finished</string>
    <string name="executing_nth_iteration">%1$d / %2$d</string>
    <string name="video_play">视频播放</string>
    <string name="video_play_auto">视频播放自动播放效果</string>

    <string name="input_phone_member">请输入手机号码</string>
    <string name="input_phone_code">请输入短信验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="get_code">获取验证码</string>
    <string name="digits_1">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>

    <string name="token">token</string>
    <string name="android_id">android_id</string>
    <string name="channel">channel</string>
    <string name="version">version</string>

    <string name="txt_no_data">暂无数据</string>

    <string name="favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="share">Share</string>
    <string name="floatactionbutton_text">同学们好</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="bt_text">同学们好，同学们辛苦了！！！</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contenttv1">dsaflasdjkflwejrlwerwer</string>
    <string name="contenttv">A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.A flat robot head, a bright sea green semicircle with antennas and small holes for eyes. To the left of the head is the word android in a lowercase black sans serif font.</string>
    <string name="topStr">《将进酒》属汉乐府《鼓吹曲·铙歌》</string>

    <string name="album_str">Android 10.0获取手机的相册以及插入图片</string>
</resources>
